Zone generation for tiles

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library(
     DGMonLibrary
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/TextureLoader.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/TextureLoader.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Tile.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/game/Tile.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Block.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Block.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Zone.hpp"
