initial collision impl

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,8 +1,10 @@
 add_library(
     DGMonLibrary
+    "${CMAKE_CURRENT_SOURCE_DIR}/util/Collidable.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/util/Const.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/util/Direction.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/util/Direction.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/util/Movable.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/util/Util.hpp"
 
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Tile.hpp"
@@ -12,6 +14,8 @@ add_library(
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Zone.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Trainer.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Trainer.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/Layout.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/Layout.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Game.hpp"
 
     "${CMAKE_CURRENT_SOURCE_DIR}/data/LayoutLoader.hpp"
