set up state machine

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -10,8 +10,8 @@ add_library(
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Tile.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Block.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Block.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/game/Zone.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/game/Zone.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/ZoneLayer.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/ZoneLayer.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Trainer.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Trainer.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Layout.hpp"
