buggy version of layouts loaded

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -10,16 +10,19 @@ add_library(
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Tile.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Block.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Block.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/game/ZoneLayer.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/game/ZoneLayer.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/ScreenLayer.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game/ScreenLayer.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Trainer.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Trainer.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Layout.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Layout.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game/Game.hpp"
 
+    "${CMAKE_CURRENT_SOURCE_DIR}/data/TextureLoader.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/data/TextureLoader.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/data/LayoutLoader.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/data/LayoutLoader.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/data/Data.hpp"
 
     "${CMAKE_CURRENT_SOURCE_DIR}/state/StateManager.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/state/StateManager.cpp"
